# FlavouredApps

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle  settings.gradle.kts
app/: CMakeLists.txt  build.gradle  google-services.json  keys.properties  local.properties  multiapp.jks  proguard-rules.pro
app/src/CountTracker/: AndroidManifest.xml  google-services.json
app/src/CountTracker/res/drawable/: backarrow.xml  bg_shape_row.xml  dashboard_bg_btn.xml  dashboard_layer_image.xml  reward_popup_bg.xml
app/src/CountTracker/res/layout/: activity_dash_board.xml  activity_detail.xml  activity_getting_start.xml  activity_ip_check.xml  activity_manage_data_preference.xml  activity_splash.xml  adapter_details_page_row.xml  dialog_gift_box_screen.xml  layout_include_bottom.xml  layout_include_top.xml
app/src/CountTracker/res/values/: applogo_background.xml  colors.xml  strings.xml  styles.xml
app/src/DiceFenzy/: AndroidManifest.xml  google-services.json
app/src/DiceFenzy/res/drawable/: dice_1.xml  dice_2.xml  dice_3.xml  dice_4.xml  dice_5.xml  dice_6.xml  round_corner_cardview_bg.xml
app/src/DiceFenzy/res/values/: colors.xml  (+2 more)
app/src/DrumJam/: AndroidManifest.xml  google-services.json
app/src/GoldCompassPro/: AndroidManifest.xml  google-services.json
app/src/QuickLapStopwatch/: AndroidManifest.xml  google-services.json
app/src/TurboTaskManager/: AndroidManifest.xml  google-services.json
app/src/WordCheck/: AndroidManifest.xml  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: 2048.cpp  native-lib.cpp
(+286 files in other folders)
